# ozl-emails

./: .gitignore  Caddyfile  docker-compose.yml
docs/: cold_email_campaign_implementation.md  cold_email_step_by_step_plan.md  contact-management-analytics-implementation-plan.md
email-templates/: package-lock.json  package.json
email-templates/src/: build.tsx
email-templates/src/templates/: DeveloperNotification.tsx  OutreachMarketing.tsx
scripts/: user-event-email-deploy.sh  user-event-email-run.sh  user-event-email-setup-vm.sh
services/api/: .env.template  Dockerfile  README.md  TESTING_PLAN.md  config.py  main.py  pyproject.toml  setup.sh
services/api/middleware/: auth.py
services/api/routers/: campaigns.py  emails.py  recipients.py  webhooks.py
services/api/shared/: db.py  email.py  email_renderer.py  email_sender.py  prompts.py  scheduling.py  webhook_processor.py
services/api/tasks/: generate.py  launch.py  retry_failed.py
services/campaign-runner/: .env.template  Dockerfile  README.md  config.py  db.py  email_renderer.py  email_sender.py  main.py  prompts.py  pyproject.toml  setup-gcp.sh  setup.sh
services/user-event-email/: .env.example  Dockerfile  config.py  email_sender.py  main.py  pyproject.toml
