[project]
name = "user-event-email"
version = "0.1.0"
description = "Worker that listens to Supabase realtime events and sends emails on request_vault_access."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "supabase>=2.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []


